Fix HTML write path.